--- a/app/src/main/res/layout/content_deliverable_update.xml
+++ b/app/src/main/res/layout/content_deliverable_update.xml
@@ -46,7 +46,8 @@
         android:text="codeTextView"
         android:id="@+id/codeTextView"
         android:textColor="#f15b05"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="match_parent"
@@ -149,7 +150,8 @@
         android:text="@string/deliverable_comments"
         android:id="@+id/commentsLabelTextView"
         android:textStyle="bold|italic"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -186,7 +188,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/deliverable_prioritizedBy"
         android:id="@+id/prioritizedByLabelTextView"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            android:layout_marginTop="5dp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
