--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:id="@+id/emailEditText"
+            android:inputType="textEmailAddress"
             android:textColor="@color/accent"
             android:hint="@string/email" />
 
@@ -77,6 +78,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="onClick_createAccountButton"/>
 
 </RelativeLayout>
