--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="black">#000000</color>
     <color name="iron">#CCCCCC</color>
     <color name="green">#1B5E20</color>
-    <color name="red">#B71C1C</color>
+    <color name="red">#EF9A9A</color>
 
     <color name="yellow_card_color">#FFFDE7</color>
     <color name="green_card_color">#F1F8E9</color>
