--- a/app/src/main/res/layout/row_deliverables_listview.xml
+++ b/app/src/main/res/layout/row_deliverables_listview.xml
@@ -42,7 +42,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textColor="#000000"
-                android:textStyle="italic"
                 android:layout_marginBottom="3dp" />
 
             <TextView
@@ -59,8 +58,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="reponsible"
                 android:id="@+id/deliverable_responsibleTextView"
-                android:layout_below="@+id/deliverable_due_dateTextView"
-                android:visibility="invisible" />
+                android:layout_below="@+id/deliverable_due_dateTextView" />
 
             <RatingBar
                 android:layout_width="wrap_content"
@@ -79,17 +77,6 @@
                 android:text="Small Text"
                 android:id="@+id/deliverableIdTextView"
                 android:visibility="invisible" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/alertImageView"
-        android:src="@drawable/ic_red_bullet"
-        android:layout_below="@id/deliverable_responsibleTextView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:visibility="visible" />
-
 
 </RelativeLayout>
 
