--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="@color/white"
+    android:layout_height="match_parent" android:background="@color/signin_background"
     tools:context="br.com.ca.asap.activity.WelcomeScreenActivity"
     android:orientation="vertical"
-    android:id="@+id/fullscreen_content">
+    android:id="@+id/fullscreen_content"
+    android:weightSum="1">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -11,7 +12,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.22">
 
     <TextView
         android:id="@+id/greetings"
@@ -19,19 +21,18 @@
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:text="@string/hello"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:text="user name"
         android:id="@+id/userNameTextView"
         android:layout_toRightOf="@+id/greetings"
@@ -43,6 +44,6 @@
         android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/black"
         android:textSize="20sp"
         android:text="@string/welcome"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
