--- a/app/src/main/res/layout/content_create_initiative.xml
+++ b/app/src/main/res/layout/content_create_initiative.xml
@@ -27,7 +27,8 @@
             android:ems="10"
             android:id="@+id/titleEditText"
             android:textColor="@color/accent"
-            android:hint="@string/title" />
+            android:hint="@string/title"
+            android:inputType="textCapSentences" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -44,7 +45,8 @@
             android:ems="10"
             android:id="@+id/descriptionEditText"
             android:textColor="@color/accent"
-            android:hint="@string/description" />
+            android:hint="@string/description"
+            android:inputType="textCapSentences" />
 
     </android.support.design.widget.TextInputLayout>
 
