--- a/app/src/main/res/layout/row_deliverables_listview.xml
+++ b/app/src/main/res/layout/row_deliverables_listview.xml
@@ -17,28 +17,13 @@
     android:focusable="false"
     android:focusableInTouchMode="false">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="work item id"
-                android:id="@+id/deliverable_codeTextView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="10dp"
-                android:textColor="#000000"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:visibility="invisible" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="title"
                 android:id="@+id/deliverable_titleTextView"
-                android:layout_below="@+id/deliverable_codeTextView"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textColor="#000000"
@@ -70,13 +55,16 @@
                 android:layout_alignParentStart="true"
                 android:visibility="invisible"/>
 
-    <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
                 android:id="@+id/deliverableIdTextView"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:layout_alignTop="@+id/deliverable_ratingBar"
+                android:layout_toRightOf="@+id/deliverable_ratingBar"
+                android:layout_toEndOf="@+id/deliverable_ratingBar" />
 
 </RelativeLayout>
 
