--- a/app/src/main/res/layout/row_initiatives_listview.xml
+++ b/app/src/main/res/layout/row_initiatives_listview.xml
@@ -5,10 +5,12 @@
     android:id="@+id/initiative_card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="70dp"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     >
 
     <TextView
@@ -27,21 +29,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/descriptionTextView"
-        android:layout_below="@+id/titleTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
         android:id="@+id/initiativeIdTextView"
         android:layout_below="@+id/titleTextView"
-        android:layout_toRightOf="@+id/descriptionTextView"
-        android:layout_toEndOf="@+id/descriptionTextView"
-        android:visibility="invisible" />
+         android:visibility="invisible" />
 
 </RelativeLayout>
 
