--- a/app/src/main/res/layout/activity_create_deliverable.xml
+++ b/app/src/main/res/layout/activity_create_deliverable.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
+    android:id="@+id/createDeliverableCoordinatorLayout"
     tools:context="br.com.ca.blueocean.activity.CreateDeliverableActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
@@ -15,11 +16,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_create_deliverables" />
+    <include layout="@layout/content_create_deliverable" />
 
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab_create_deliverable"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/ic_action_send" />
 
 </android.support.design.widget.CoordinatorLayout>
