--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -20,6 +20,6 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|right" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_action_send_message" />
+        android:src="@drawable/ic_action_send" />
 
 </android.support.design.widget.CoordinatorLayout>
