--- a/app/src/main/res/layout/content_deliverable_update.xml
+++ b/app/src/main/res/layout/content_deliverable_update.xml
@@ -47,9 +47,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="titleTextView"
         android:id="@+id/titleTextView"
-        android:textStyle="bold"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:layout_marginBottom="3dp" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -58,16 +58,6 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_duedate"
-        android:id="@+id/duedateLabelTextView"
-        android:layout_marginRight="10dp"
-        android:textStyle="bold"
-        android:layout_column="1"/>
 
     </TableRow>
 
@@ -78,7 +68,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="date Text"
         android:id="@+id/dueDateTextView"
         android:layout_column="1"/>
@@ -95,7 +85,8 @@
             android:id="@+id/currentUserLabelTextView"
             android:textStyle="bold"
             android:layout_column="12"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
