--- a/app/src/main/res/menu/menu_showmessages.xml
+++ b/app/src/main/res/menu/menu_showmessages.xml
@@ -4,7 +4,7 @@
 
     <!-- should appear as action button -->
     <item android:id="@+id/action_send_messsage"
-        android:icon="@drawable/ic_action_send_message"
+        android:icon="@drawable/ic_action_send"
         android:title="@string/menu_send_message"
         app:showAsAction="ifRoom" />
 
