--- a/app/src/main/res/layout/content_deliverable_update.xml
+++ b/app/src/main/res/layout/content_deliverable_update.xml
@@ -123,14 +123,16 @@
         android:id="@+id/commentsLabelTextView"
         android:textStyle="bold"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:visibility="invisible" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
         android:id="@+id/commentsTextView"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:visibility="invisible" />
 
     </LinearLayout>
 
