--- a/app/src/main/res/layout/activity_deliverable_details.xml
+++ b/app/src/main/res/layout/activity_deliverable_details.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="br.com.ca.blueocean.activity.DeliverableUpdateActivity">
+    android:id="@+id/deliverableDetailsCoordinatorLayout"
+    tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -15,7 +16,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_deliverable_update" />
+    <include layout="@layout/content_deliverable_details" />
 
 
 </android.support.design.widget.CoordinatorLayout>
