--- a/app/src/main/res/layout/activity_deliverables.xml
+++ b/app/src/main/res/layout/activity_deliverables.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    android:id="@+id/deliverableLayout"
+    android:id="@+id/deliverablesLayout"
     tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
