--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="@color/signin_background"
+    android:layout_height="match_parent" android:background="@color/white"
     tools:context="br.com.ca.blueocean.activity.WelcomeScreenActivity"
     android:orientation="vertical"
     android:id="@+id/fullscreen_content"
@@ -12,8 +12,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.22">
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/greetings"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
         android:textColor="@color/black"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:text="@string/hello"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
@@ -32,18 +31,25 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/black"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:text="user name"
         android:id="@+id/userNameTextView"
         android:layout_toRightOf="@+id/greetings"
         android:layout_toEndOf="@+id/greetings"
         android:layout_alignBottom="@+id/greetings" />
+
     </RelativeLayout>
 
     <TextView android:id="@+id/message_content" android:layout_width="match_parent"
         android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/black"
         android:textSize="20sp"
         android:text="@string/welcome"
-        android:layout_marginTop="20dp" />
+        android:textStyle="italic" />
+
+    <TextView android:id="@+id/message_touch_screen" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/black"
+        android:textSize="20sp"
+        android:text="@string/touch_screen"
+        android:layout_marginTop="30dp" />
 
 </LinearLayout>
