--- a/app/src/main/res/layout/activity_initiatives.xml
+++ b/app/src/main/res/layout/activity_initiatives.xml
@@ -3,18 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.ca.blueocean.activity.InitiativesActivity"
-    android:background="@color/activity_background">
+    tools:context="br.com.ca.blueocean.activity.InitiativesActivity">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list"
-        />
+        android:id="@+id/list" />
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab_new_initiative"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -22,6 +18,7 @@
         android:src="@drawable/ic_action_add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp" />
 
 </RelativeLayout>
