--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -21,18 +21,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
         android:id="@+id/textView"
         android:textStyle="italic"
         android:fontFamily="sans-serif-medium"
-        android:textSize="60dip"
+        android:textSize="40dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/white"
+        android:textColor="@color/red"
         android:typeface="serif"
         android:elevation="10dp"
-        android:elegantTextHeight="true" />
+        android:elegantTextHeight="true"
+        android:layout_marginTop="10dp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -42,6 +42,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:theme="@style/YabeeTextInputLayout"
         >
             <EditText
                 android:layout_width="match_parent"
@@ -49,7 +50,7 @@
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:id="@+id/emailEditText"
-                android:textColor="@color/accent"
+                android:textColor="@color/black"
                 android:hint="@string/email" />
 
     </android.support.design.widget.TextInputLayout>
@@ -60,6 +61,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:theme="@style/YabeeTextInputLayout"
         android:id="@+id/pwdEditTextLayout">
 
             <EditText
@@ -68,7 +70,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/pwdEditText"
-                android:textColor="@color/accent"
+                android:textColor="@color/black"
                 android:hint="@string/password" />
 
     </android.support.design.widget.TextInputLayout>
@@ -88,13 +90,14 @@
 
     <TextView android:id="@+id/link_signup"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="@string/signup_phrase"
         android:gravity="center"
         android:textSize="16dip"
         android:layout_below="@+id/btn_login"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:textColor="@color/black" />
 
 </RelativeLayout>
 
