--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -19,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
-        android:textColor="@color/black"
         android:textSize="25sp"
         android:text="@string/hello"
         android:layout_marginBottom="20dp"
@@ -30,7 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black"
         android:textSize="25sp"
         android:text="user name"
         android:id="@+id/userNameTextView"
@@ -41,13 +39,13 @@
     </RelativeLayout>
 
     <TextView android:id="@+id/message_content" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/black"
+        android:layout_height="wrap_content" android:keepScreenOn="true"
         android:textSize="20sp"
         android:text="@string/welcome"
         android:textStyle="italic" />
 
     <TextView android:id="@+id/message_touch_screen" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="@color/black"
+        android:layout_height="wrap_content" android:keepScreenOn="true"
         android:textSize="20sp"
         android:text="@string/touch_screen"
         android:layout_marginTop="30dp" />
