--- a/app/src/main/res/layout/row_initiatives_listview.xml
+++ b/app/src/main/res/layout/row_initiatives_listview.xml
@@ -6,12 +6,14 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingBottom="0dp"
+    android:paddingTop="0dp"
+    android:elevation="0dp">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    >
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp">
 
     <TextView
         android:layout_width="wrap_content"
