--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -28,7 +28,7 @@
         android:textSize="40dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/red"
+        android:textColor="@color/primary"
         android:typeface="serif"
         android:elevation="10dp"
         android:elegantTextHeight="true"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:elevation="10dp"
-        android:background="@color/primary_dark"
+        android:background="@color/primary"
         android:layout_below="@+id/pwdEditTextLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
