--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:text="@string/create_account"
         android:elevation="10dp"
-        android:background="@color/primary_dark"
+        android:background="@color/primary"
         android:layout_below="@+id/pwdEditTextLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
