--- a/app/src/main/res/layout/activity_deliverables.xml
+++ b/app/src/main/res/layout/activity_deliverables.xml
@@ -26,8 +26,6 @@
         android:id="@+id/deliverablesLayout"
         tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">
 
-
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +37,7 @@
         android:src="@drawable/ic_action_add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentEnd="false"
         android:layout_marginRight="10dp" />
 
 </RelativeLayout>
