--- a/app/src/main/res/layout/activity_deliverable_details.xml
+++ b/app/src/main/res/layout/activity_deliverable_details.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
-    android:id="@+id/deliverableDetailsCoordinatorLayout"
-    tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/deliverableDetailsLinearLayout"
+        tools:context="br.com.ca.blueocean.activity.DeliverablesActivity"
+        android:orientation="vertical"
+        android:weightSum="1">
+
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -16,7 +19,25 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:id="@+id/deliverableDetailLayout"
+        tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
+
     <include layout="@layout/content_deliverable_details" />
 
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab_change_priority"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:src="@drawable/ic_action_bookmark"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+    </RelativeLayout>
+
+</LinearLayout>
