--- a/app/src/main/res/layout/activity_synchronize_initiatives.xml
+++ b/app/src/main/res/layout/activity_synchronize_initiatives.xml
@@ -25,7 +25,8 @@
         android:textColor="#000000"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:fontFamily="sans-serif" />
 
 
 </RelativeLayout>
