--- a/app/src/main/res/layout/content_deliverable_details.xml
+++ b/app/src/main/res/layout/content_deliverable_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:fillViewport="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_deliverable_update"
+    tools:showIn="@layout/activity_deliverable_details"
     tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
 
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -19,26 +19,6 @@
     tools:showIn="@layout/activity_deliverable_update"
     tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="1dp"
-        card_view:cardUseCompatPadding="true"
-        android:layout_marginTop="10dp">
-
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-        android:showDividers="beginning|end"
-        android:elevation="1dp"
-        android:weightSum="1">
-
 
     <TextView
         android:layout_width="match_parent"
@@ -48,21 +28,8 @@
         android:id="@+id/titleTextView"
         android:layout_marginTop="10dp"
         android:textColor="#000000"
-        android:layout_marginBottom="3dp" />
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_marginBottom="3dp"
+        android:fontFamily="sans-serif-light" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,39 +39,30 @@
         android:id="@+id/dueDateTextView"
         android:layout_column="1"/>
 
-    </TableRow>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/deliverable_current_user_name"
+        android:id="@+id/currentUserLabelTextView"
+        android:textStyle="bold|italic"
+        android:layout_marginTop="10dp" />
 
-    </TableLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="rep Text"
+        android:id="@+id/currentUserTextView" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/deliverable_current_user_name"
-            android:id="@+id/currentUserLabelTextView"
-            android:textStyle="bold"
-            android:layout_column="12"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="rep Text"
-            android:id="@+id/currentUserTextView"
-            android:layout_column="12" />
-
-        <TextView
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/deliverable_description"
         android:id="@+id/descriptionLabelTextView"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp" />
-
+        android:textStyle="bold|italic"
+        android:layout_marginTop="10dp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -118,78 +76,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_comments"
-        android:id="@+id/commentsLabelTextView"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp"
-        android:visibility="invisible" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/commentsTextView"
-        android:layout_marginBottom="20dp"
-        android:visibility="invisible" />
-
-    </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/card_view3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="1dp"
-        card_view:cardUseCompatPadding="true">
-
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:elevation="1dp"
-        android:visibility="invisible">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_prioritizedBy"
-        android:id="@+id/prioritizedByLabelTextView"
-        android:textStyle="bold|italic"
-        android:layout_marginTop="5dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/prioritizedByTextView"
-        android:layout_marginBottom="20dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/deliverable_priority_comments"
         android:id="@+id/priorityCommentsLabelTextView"
-        android:textStyle="bold|italic"
-        android:layout_marginBottom="10dp" />
+        android:textStyle="bold|italic" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
         android:id="@+id/priorityCommentsTextView"
-        android:layout_marginBottom="20dp"/>
-
-    </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+        android:layout_marginBottom="5dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/prioritizedByTextView"
+        android:layout_marginBottom="120dp"/>
 
 </LinearLayout>
 
