--- a/app/src/main/res/layout/row_deliverables_listview.xml
+++ b/app/src/main/res/layout/row_deliverables_listview.xml
@@ -27,7 +27,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textColor="#000000"
-                android:layout_marginBottom="3dp" />
+                android:layout_marginBottom="3dp"
+                android:fontFamily="sans-serif-light" />
 
             <TextView
                 android:layout_width="wrap_content"
