--- a/app/src/main/res/layout/row_initiatives_listview.xml
+++ b/app/src/main/res/layout/row_initiatives_listview.xml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/initiative_card_view"
-    android:layout_gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="0dp"
-    android:paddingTop="0dp"
-    android:elevation="0dp">
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingLeft="10dp"
@@ -24,7 +14,10 @@
         android:textColor="#000000"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,4 +30,3 @@
 
 </RelativeLayout>
 
-</android.support.v7.widget.CardView>
