--- a/app/src/main/res/layout/content_deliverable_details.xml
+++ b/app/src/main/res/layout/content_deliverable_details.xml
@@ -9,125 +9,92 @@
     tools:showIn="@layout/activity_deliverable_details"
     tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
 
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_deliverable_update"
-    tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity">
-
-
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="titleTextView"
-        android:id="@+id/titleTextView"
-        android:layout_marginTop="10dp"
-        android:textColor="#000000"
-        android:layout_marginBottom="3dp"
-        android:fontFamily="sans-serif-light" />
+        android:orientation="vertical"
+        android:paddingLeft="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="br.com.ca.blueocean.activity.DeliverableDetailsActivity"
+        tools:showIn="@layout/activity_deliverable_details">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="date Text"
-        android:id="@+id/dueDateTextView"
-        android:layout_column="1"/>
 
-    <!--
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_current_user_name"
-        android:id="@+id/currentUserLabelTextView"
-        android:textStyle="bold|italic"
-        android:layout_marginTop="10dp" />
-    -->
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-light"
+            android:text="titleTextView"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            tools:textColor="@color/black" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/currentUserLabelImageView"
-        android:src="@mipmap/ic_face_black_24dp"
-        android:layout_marginTop="32sp" />
+        <TextView
+            android:id="@+id/dueDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:text="date Text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="rep Text"
-        android:id="@+id/currentUserTextView"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/descriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.76"
+            android:text="Small Text"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="16sp"
+            tools:textColor="@color/black" />
 
-    <!--
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_description"
-        android:id="@+id/descriptionLabelTextView"
-        android:textStyle="bold|italic"
-        android:layout_marginTop="10dp" />
-    -->
+        <ImageView
+            android:id="@+id/currentUserLabelImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32sp"
+            android:src="@mipmap/ic_face_black_24dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/descriptionLabelImageView"
-        android:src="@mipmap/ic_label_outline_black_24dp"
-        android:layout_marginTop="32sp" />
+        <TextView
+            android:id="@+id/currentUserTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dp"
+            android:text="rep Text"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="16sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/descriptionTextView"
-        android:layout_weight="0.76"
-        android:textSize="16sp" />
+        <ImageView
+            android:id="@+id/priorityCommentsLabelImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32sp"
+            android:src="@mipmap/ic_bookmark_black_24dp" />
 
-    <!--
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/deliverable_priority_comments"
-        android:id="@+id/priorityCommentsLabelTextView"
-        android:textStyle="bold|italic"
-        android:layout_marginTop="20dp" />
-    -->
+        <TextView
+            android:id="@+id/priorityCommentsTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Small Text"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="16sp"
+            tools:textColor="@color/black" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/priorityCommentsLabelImageView"
-        android:src="@mipmap/ic_bookmark_black_24dp"
-        android:layout_marginTop="32sp" />
+        <TextView
+            android:id="@+id/prioritizedByTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="120dp"
+            android:text="Small Text"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="invisible" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/priorityCommentsTextView"
-        android:layout_marginBottom="5dp"
-        android:textSize="16sp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/prioritizedByTextView"
-        android:layout_marginBottom="120dp"
-        android:visibility="invisible" />
-
-</LinearLayout>
+    </LinearLayout>
 
 </ScrollView>
 
