--- a/app/src/main/res/layout/content_edit_deliverable.xml
+++ b/app/src/main/res/layout/content_edit_deliverable.xml
@@ -4,7 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:orientation="vertical"
+    tools:showIn="@layout/activity_edit_deliverable"
+    tools:context="br.com.ca.blueocean.activity.EditDeliverableActivity"
+    android:weightSum="1">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -15,9 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:id="@+id/titleEditText"
+            android:id="@+id/titleUpdateEditText"
             android:textColor="@color/accent"
-            android:hint="@string/entry_deliverable_title"
             android:inputType="textCapSentences" />
 
     </android.support.design.widget.TextInputLayout>
@@ -30,9 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:id="@+id/descriptionEditText"
+            android:id="@+id/descriptionUpdateEditText"
             android:textColor="@color/accent"
-            android:hint="@string/entry_deliverable_description"
             android:inputType="textCapSentences|textMultiLine" />
 
     </android.support.design.widget.TextInputLayout>
@@ -45,10 +51,10 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:id="@+id/calendarImageView"
+            android:id="@+id/calendarUpdateImageView"
             android:src="@mipmap/ic_today_black_24dp"
             android:layout_weight="0.05"
-            android:onClick="onCalendarImageClick"
+            android:onClick="onCalendarUpdateImageClick"
             android:layout_marginTop="40dp"
             android:layout_centerVertical="true" />
 
@@ -57,12 +63,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/entry_deliverable_dueDate"
-            android:id="@+id/deliverableDateTextView"
+            android:id="@+id/deliverableDueDateUpdateTextView"
             android:layout_alignBottom="@+id/calendarImageView"
             android:layout_toRightOf="@+id/calendarImageView"
             android:layout_toEndOf="@+id/calendarImageView"
             android:layout_marginLeft="10dp" />
 
     </RelativeLayout>
+
 
 </LinearLayout>
