--- a/app/src/main/res/layout/activity_deliverables.xml
+++ b/app/src/main/res/layout/activity_deliverables.xml
@@ -31,7 +31,8 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/deliverables_listView" />
+            android:id="@+id/deliverables_listView"
+            android:divider="@null"/>
 
         <android.support.design.widget.FloatingActionButton android:id="@+id/fab_new_deliverable"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
