--- a/app/src/main/res/layout/activity_initiatives.xml
+++ b/app/src/main/res/layout/activity_initiatives.xml
@@ -10,7 +10,9 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list" />
+        android:id="@+id/list"
+        android:divider="@null"
+        />
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab_new_initiative"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
