--- a/app/src/main/res/layout/content_deliverable_details.xml
+++ b/app/src/main/res/layout/content_deliverable_details.xml
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32sp"
-            android:src="@mipmap/ic_bookmark_black_24dp" />
+            android:src="@drawable/ic_star_border" />
 
         <TextView
             android:id="@+id/priorityCommentsTextView"
