--- a/app/src/main/res/layout/fragment_show_finished_deliverables.xml
+++ b/app/src/main/res/layout/fragment_show_finished_deliverables.xml
@@ -29,7 +29,8 @@
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/f_deliverables_listView" />
+                android:id="@+id/f_deliverables_listView"
+                android:divider="@null"/>
 
         </RelativeLayout>
 
