--- a/app/src/main/res/layout/row_finished_deliverables_listview.xml
+++ b/app/src/main/res/layout/row_finished_deliverables_listview.xml
@@ -48,7 +48,7 @@
                 android:layout_alignTop="@+id/deliverable_due_dateTextView"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
-                android:src="@mipmap/ic_bookmark_black_24dp"
+                android:src="@drawable/ic_star_border"
                 android:longClickable="false"
                 android:visibility="invisible" />
 
