--- a/app/src/main/res/layout/row_initiatives_listview.xml
+++ b/app/src/main/res/layout/row_initiatives_listview.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view_initiative"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="3dp"
+    card_view:cardBackgroundColor="#eeeeee"
+    card_view:cardUseCompatPadding="true">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp">
+    android:paddingLeft="5dp"
+    android:paddingTop="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,3 +41,4 @@
 
 </RelativeLayout>
 
+</android.support.v7.widget.CardView>
