--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -4,17 +4,30 @@
 
     <!-- should appear as action button -->
 
-    <item android:id="@+id/action_synchronize_initiatives"
-        android:icon="@drawable/ic_action_cloud_download"
-        android:title="@string/menu_synchronize_initiatives"
-        android:orderInCategory="200"
+
+    <item android:id="@+id/action_assignment"
+        android:icon="@drawable/ic_action_assignment"
+        android:title="@string/menu_show_assignment"
+        android:orderInCategory="210"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/action_group"
+        android:icon="@drawable/ic_action_group"
+        android:title="@string/menu_show_group"
+        android:orderInCategory="220"
         app:showAsAction="always" />
 
     <item android:id="@+id/action_show_all_priorities"
-        android:icon="@drawable/ic_action_bookmark"
+        android:icon="@drawable/ic_action_star"
         android:title="@string/menu_show_all_priorities"
         android:orderInCategory="300"
         app:showAsAction="always" />
+
+    <item android:id="@+id/action_show_forum"
+        android:icon="@drawable/ic_action_forum"
+        android:title="@string/menu_show_forum"
+        android:orderInCategory="300"
+        app:showAsAction="never" />
 
     <!--
     <item android:id="@+id/action_show_messages"
@@ -24,13 +37,14 @@
         app:showAsAction="never" />
     -->
 
-    <item android:id="@+id/action_show_info"
-        android:title="@string/menu_info"
+    <item android:id="@+id/action_synchronize_initiatives"
+        android:icon="@drawable/ic_action_cloud_download"
+        android:title="@string/menu_synchronize_initiatives"
         android:orderInCategory="600"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_show_deliverables"
-        android:title="@string/menu_show_deliverables"
+    <item android:id="@+id/action_show_info"
+        android:title="@string/menu_info"
         android:orderInCategory="700"
         app:showAsAction="never" />
 
