--- a/app/src/main/res/menu/menu_show_deliverables.xml
+++ b/app/src/main/res/menu/menu_show_deliverables.xml
@@ -23,7 +23,7 @@
         android:icon="@drawable/ic_share"
         android:title="@string/share"
         android:orderInCategory="400"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 
     <item android:id="@+id/initiative_report"
         android:icon="@drawable/ic_show_chart"
