--- a/app/src/main/res/layout/row_finished_deliverables_listview.xml
+++ b/app/src/main/res/layout/row_finished_deliverables_listview.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="#D7CCC8"
+    card_view:cardBackgroundColor="#E0E0E0"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true">
